@@ -89,6 +89,8 @@ extern gchar *mdi_type_label[3];
 extern guint search_type;
 extern gchar *search_type_label[2];
 
+extern gchar *open_files;
+
 void create_find_dialog(FindDialog *);
 void create_replace_dialog(ReplaceDialog *);
 void create_jump_dialog(JumpDialog *);
