@@ -1,3 +1,8 @@
+1998-06-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gnome-support.c, main.c: now ghex does proper SM. currently
+	the only state it saves and restores are open files.
+	
 1998-06-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* callbacks.c: let conversion callback handle erroneus values.
